<?xml version="1.0"?>
<package format="2">
  <name>gazebo_worlds</name>
  <version>0.0.0</version>
  <description>The gazebo_worlds package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="todo@todo.todo">todo</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <build_depend>gazebo_ros</build_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>


  <export>
    <!--<gazebo gazebo_media_path="${prefix}/models" />-->
  </export>


</package>
